# causal_chess

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  intro.md  plot_stats.py  pyproject.toml
src/: encoding.cpp  encoding.hpp  main.cpp  model.cpp  model.hpp  play.cpp  play.hpp  search.cpp  search.hpp  web_server.cpp  web_server.hpp
src/causal_chess/: __init__.py  cli.py  encoding.py  model.py  play.py  search.py
tests/: test_all.cpp  test_encoding.py  test_model.py  test_search.py
web/: fonts.css  index.html
